Sharing link text and open graph meta tags

--- a/app/views/givers/_sharing.html.erb
+++ b/app/views/givers/_sharing.html.erb
@@ -49,7 +49,7 @@
         </li>
         <li class="rrssb-twitter">
           <!-- Replace href with your Meta and URL information  -->
-          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20Please%20Share!%20Truck%20Safety%20%20http%3A%2F%2Ffortrucksafety.com%20http%3A%2F%2Ffortrucksafety.com%2images%2Fpreview.png&amp;hashtags=trucksafety,fortrucksafety"
+          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http%3A%2F%2Ffortrucksafety.com%2images%2Fpreview.png&amp;hashtags=trucksafety,fortrucksafety"
           class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -60,8 +60,8 @@
             <span class="rrssb-text">twitter</span>
           </a>
         </li>
-        <!-- <li class="rrssb-reddit">
-          <a href="http://www.reddit.com/submit?url=http://www.kurtnoble.com/labs/rrssb/&title=Check%20out%20how%20ridiculously%20responsive%20these%20social%20buttons%20are&text=Check%20out%20how%20ridiculously%20responsive%20these%20social%20buttons%20are">
+        <li class="rrssb-reddit">
+          <a href="http://www.reddit.com/submit?url=http://fortrucksafety.com&title=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.&text=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M11.794 15.316c0-1.03-.835-1.895-1.866-1.895-1.03 0-1.893.866-1.893 1.896s.863 1.9 1.9 1.9c1.023-.016 1.865-.916 1.865-1.9zM18.1 13.422c-1.03 0-1.895.864-1.895 1.895 0 1 .9 1.9 1.9 1.865 1.03 0 1.87-.836 1.87-1.865-.006-1.017-.875-1.917-1.875-1.895zM17.527 19.79c-.678.68-1.826 1.007-3.514 1.007h-.03c-1.686 0-2.834-.328-3.51-1.005-.264-.265-.693-.265-.958 0-.264.265-.264.7 0 1 .943.9 2.4 1.4 4.5 1.402.005 0 0 0 0 0 .005 0 0 0 0 0 2.066 0 3.527-.46 4.47-1.402.265-.264.265-.693.002-.958-.267-.334-.688-.334-.988-.043z"
@@ -72,9 +72,9 @@
             </span>
             <span class="rrssb-text">reddit</span>
           </a>
-        </li> -->
-        <!-- <li class="rrssb-hackernews">
-          <a href="https://news.ycombinator.com/submitlink?u=http://www.kurtnoble.com/labs/rrssb/&t=Check%20out%20how%20ridiculously%20responsive%20these%20social%20buttons%20are&text=Check%20out%20how%20ridiculously%20responsive%20these%20social%20buttons%20are">
+        </li>
+        <li class="rrssb-hackernews">
+          <a href="https://news.ycombinator.com/submitlink?u=http://fortrucksafety.com&t=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.&text=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path fill="#FFF" d="M14 13.626l-4.508-9.19H6.588l6.165 12.208v6.92h2.51v-6.92l6.15-12.21H18.69" />
@@ -82,10 +82,10 @@
             </span>
             <span class="rrssb-text">hackernews</span>
           </a>
-        </li> -->
+        </li>
         <li class="rrssb-googleplus">
           <!-- Replace href with your meta and URL information.  -->
-          <a href="https://plus.google.com/share?url=Check%20out%20how%20ridiculously%20responsive%20these%20social%20buttons%20are%20http://kurtnoble.com/labs/rrssb/index.html" class="popup">
+          <a href="https://plus.google.com/share?url=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20http://trucksafety.com" class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M14.703 15.854l-1.22-.948c-.37-.308-.88-.715-.88-1.46 0-.747.51-1.222.95-1.662 1.42-1.12 2.84-2.31 2.84-4.817 0-2.58-1.62-3.937-2.4-4.58h2.098l2.203-1.384h-6.67c-1.83 0-4.467.433-6.398 2.027C3.768 4.287 3.06 6.018 3.06 7.576c0 2.634 2.02 5.328 5.603 5.328.34 0 .71-.033 1.083-.068-.167.408-.336.748-.336 1.324 0 1.04.55 1.685 1.01 2.297-1.523.104-4.37.273-6.466 1.562-1.998 1.187-2.605 2.915-2.605 4.136 0 2.512 2.357 4.84 7.288 4.84 5.822 0 8.904-3.223 8.904-6.41.008-2.327-1.36-3.49-2.83-4.73h-.01zM10.27 11.95c-2.913 0-4.232-3.764-4.232-6.036 0-.884.168-1.797.744-2.51.543-.68 1.49-1.12 2.372-1.12 2.807 0 4.256 3.797 4.256 6.24 0 .613-.067 1.695-.845 2.48-.537.55-1.438.947-2.295.95v-.003zm.032 13.66c-3.62 0-5.957-1.733-5.957-4.143 0-2.408 2.165-3.223 2.91-3.492 1.422-.48 3.25-.545 3.556-.545.34 0 .52 0 .767.034 2.574 1.838 3.706 2.757 3.706 4.48-.002 2.072-1.736 3.664-4.982 3.648l.002.017zM23.254 11.89V8.52H21.57v3.37H18.2v1.714h3.367v3.4h1.684v-3.4h3.4V11.89"
@@ -95,7 +95,7 @@
             <span class="rrssb-text">google+</span>
           </a>
         </li>
-        <!-- <li class="rrssb-youtube">
+        <li class="rrssb-youtube">
           <a href="#">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -104,10 +104,10 @@
             </span>
             <span class="rrssb-text">youtube</span>
           </a>
-        </li> -->
+        </li>
         <li class="rrssb-pinterest">
           <!-- Replace href with your meta and URL information.  -->
-          <a href="http://pinterest.com/pin/create/button/?url=http://kurtnoble.com/labs/rrssb/index.html&amp;media=http://kurtnoble.com/labs/rrssb/media/facebook-share.jpg&amp;description=Ridiculously%20responsive%20social%20sharing%20buttons%20by%20KNI%20Labs.">
+          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=http://fortrucksafety.com/path-to-image/image-name.jpg&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M14.02 1.57c-7.06 0-12.784 5.723-12.784 12.785S6.96 27.14 14.02 27.14c7.062 0 12.786-5.725 12.786-12.785 0-7.06-5.724-12.785-12.785-12.785zm1.24 17.085c-1.16-.09-1.648-.666-2.558-1.22-.5 2.627-1.113 5.146-2.925 6.46-.56-3.972.822-6.952 1.462-10.117-1.094-1.84.13-5.545 2.437-4.632 2.837 1.123-2.458 6.842 1.1 7.557 3.71.744 5.226-6.44 2.924-8.775-3.324-3.374-9.677-.077-8.896 4.754.19 1.178 1.408 1.538.49 3.168-2.13-.472-2.764-2.15-2.683-4.388.132-3.662 3.292-6.227 6.46-6.582 4.008-.448 7.772 1.474 8.29 5.24.58 4.254-1.815 8.864-6.1 8.532v.003z"
@@ -117,8 +117,8 @@
             <span class="rrssb-text">pinterest</span>
           </a>
         </li>
-        <!-- <li class="rrssb-pocket">
-          <a href="https://getpocket.com/save?url=http://kurtnoble.com/labs/rrssb/index.html">
+        <li class="rrssb-pocket">
+          <a href="https://getpocket.com/save?url=http://fortrucksafety.com">
             <span class="rrssb-icon">
               <svg width="32" height="28" viewBox="0 0 32 28" xmlns="http://www.w3.org/2000/svg">
                 <path d="M28.782.002c2.03.002 3.193 1.12 3.182 3.106-.022 3.57.17 7.16-.158 10.7-1.09 11.773-14.588 18.092-24.6 11.573C2.72 22.458.197 18.313.057 12.937c-.09-3.36-.05-6.72-.026-10.08C.04 1.113 1.212.016 3.02.008 7.347-.006 11.678.004 16.006.002c4.258 0 8.518-.004 12.776 0zM8.65 7.856c-1.262.135-1.99.57-2.357 1.476-.392.965-.115 1.81.606 2.496 2.453 2.334 4.91 4.664 7.398 6.966 1.086 1.003 2.237.99 3.314-.013 2.407-2.23 4.795-4.482 7.17-6.747 1.203-1.148 1.32-2.468.365-3.426-1.01-1.014-2.302-.933-3.558.245-1.596 1.497-3.222 2.965-4.75 4.526-.706.715-1.12.627-1.783-.034-1.597-1.596-3.25-3.138-4.93-4.644-.47-.42-1.123-.647-1.478-.844z"
@@ -127,7 +127,8 @@
             </span>
             <span class="rrssb-text">pocket</span>
           </a>
-        </li> -->
+        </li>
+   <!--
         <li class="rrssb-github">
           <a href="https://github.com/kni-labs/rrssb">
             <span class="rrssb-icon">
@@ -139,9 +140,9 @@
             <span class="rrssb-text">github</span>
           </a>
         </li>
-
-        <!-- <li class="rrssb-vk">
-          <a href="http://vk.com/share.php?url=http://kurtnoble.com/labs/rrssb/index.html" class="popup">
+-->
+        <li class="rrssb-vk">
+          <a href="http://vk.com/share.php?url=http://fortrucksafety.com" class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="70 70 378.7 378.7"><path d="M254.998 363.106h21.217s6.408-.706 9.684-4.23c3.01-3.24 2.914-9.32 2.914-9.32s-.415-28.47 12.796-32.663c13.03-4.133 29.755 27.515 47.482 39.685 13.407 9.206 23.594 7.19 23.594 7.19l47.407-.662s24.797-1.53 13.038-21.027c-.96-1.594-6.85-14.424-35.247-40.784-29.728-27.59-25.743-23.126 10.063-70.85 21.807-29.063 30.523-46.806 27.8-54.405-2.596-7.24-18.636-5.326-18.636-5.326l-53.375.33s-3.96-.54-6.892 1.216c-2.87 1.716-4.71 5.726-4.71 5.726s-8.452 22.49-19.714 41.618c-23.77 40.357-33.274 42.494-37.16 39.984-9.037-5.842-6.78-23.462-6.78-35.983 0-39.112 5.934-55.42-11.55-59.64-5.802-1.4-10.076-2.327-24.915-2.48-19.046-.192-35.162.06-44.29 4.53-6.072 2.975-10.757 9.6-7.902 9.98 3.528.47 11.516 2.158 15.75 7.92 5.472 7.444 5.28 24.154 5.28 24.154s3.145 46.04-7.34 51.758c-7.193 3.922-17.063-4.085-38.253-40.7-10.855-18.755-19.054-39.49-19.054-39.49s-1.578-3.873-4.398-5.947c-3.42-2.51-8.2-3.307-8.2-3.307l-50.722.33s-7.612.213-10.41 3.525c-2.488 2.947-.198 9.036-.198 9.036s39.707 92.902 84.672 139.72c41.234 42.93 88.048 40.112 88.048 40.112"/></svg>
             </span>
