--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,11 @@
     = include_gon(init: true)
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     %script{src: "https://js.braintreegateway.com/js/beta/braintree-hosted-fields-beta.18.js"}
+    %meta{:property => "og:title", :content => "Help Prevent Truck Underride Deaths" }
+    %meta{:property => "og:site_name", :content => "For Truck Safety" }
+    %meta{:property => "og:url", :content => "http://fortrucksafety.com" }
+    %meta{:property => "og:description", :content => "\"It is safer to run into a brick wall then the back of a truck\" There are bars, called underride guards, at the back of the truck to stop cars from riding under the truck. But underride guards don't always stop cars from going under the truck. In 2013, our family found that out the hard way." }
+    %meta{:property => "og:image", :content => "100x100 image url goes here" }
     = csrf_meta_tags
     %meta{:content => "width=device-width", :name => "viewport"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Signika:400,600", :rel => "stylesheet", :type => "text/css"}/
