--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -56,13 +56,12 @@
     <h1>Lives CAN BE Saved!</h1>
     <p>Last year our family was successful in collecting and delivering more than 11,000 signatures in a petition to the Department of Transportation to make changes. Progress is being made toward stricter laws, but the industry needs better options.</p>
     <p><strong><em>Research must be done to offer the trucking industry affordable technologies that protect our families on the road.</em></strong></p>
-  </section>
+    </section>
 </article>
-<article>
+<article class="contains-video">
   <section>
     <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the underride guard on the truck in front of us had been strong enough to prevent our car from going under it, AnnaLeah and Mary would be here today.</p>
-        <%= image_tag("content/SAFER_Barrier_crash_photo.jpg", alt: "Photo of a racecar crashing against a Steel and Foam Energy Reduction barrier at high speed. While the car is damaged, the driver is visibly unharmed.") %>
-    <p class="caption">&copy; Dean Sicking, SAFER barrier, used with permission </p>
+      <iframe width="420" height="315" src="https://www.youtube.com/embed/m69mxZJ6X9M" frameborder="0" allowfullscreen></iframe>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
       <li>Other engineers have contacted us over the last year looking to work on underride guards.</li>
@@ -87,8 +86,8 @@
       <li>Your donation will help fund research that will save lives!</li>
     </ul>
     <%= image_tag("content/GWMemorial_99.jpg", alt: "Photo of the Karth Family, from before the crash.") %>
-    <p><strong>It's too late for AnnaLeah and Mary but, with help from people like you, we will save lives.</strong></p>
-    <p>~~The Karth Family</p>
+    <p class="no-bottom-margin"><strong>It's too late for AnnaLeah and Mary but, with help from people like you, we will save lives.</strong></p>
+    <%= image_tag("layout/the_karth_family_signiture.png", alt: "(signed) The Karth Family", class: "signiture") %>
   </section>
 </article>
 <article>
