--- a/app/views/givers/thanks.html.haml
+++ b/app/views/givers/thanks.html.haml
@@ -1,3 +1,4 @@
 %section.donate-form
+  %p= link_to "Donate again", root_path
   %p Thank you #{flash[:name]}
   %p Your donation reciept has been sent to the email you provided.
