--- a/app/assets/stylesheets/donate.css
+++ b/app/assets/stylesheets/donate.css
@@ -53,12 +53,15 @@ main article.donations section.donate-form {
   width:98%;
   box-shadow: inset 0 0 7em -2em orange, 5px 5px 15px grey;
   z-index:3;
+
 }
 
 main article.donations section.donate-form fieldset {
   border: none;
   padding: 0;
   margin: 0;
+  width:314px;
+  display:table-cell;
 }
 
 main article.donations div.form-group {
@@ -79,6 +82,7 @@ main article.donations div.form-group {
   z-index:4;
   overflow:visible;
 
+  width: 100%;
 }
 main article.donations div.form-group:hover {
   background-color:#ffffdd;
@@ -101,6 +105,7 @@ main article.donations div.form-group:nth-of-type(9) {
 }
 main article.donations div.form-group:nth-of-type(9) textarea {
   margin-top: 1em;
+  max-width: 314px;
 }
 main article.donations div.form-group:nth-of-type(8) { width:100%; border-bottom:1px solid #aaa; }
 
