Made rule Firefox specific

--- a/app/assets/stylesheets/donate.css
+++ b/app/assets/stylesheets/donate.css
@@ -61,7 +61,12 @@ main article.donations section.donate-form fieldset {
   padding: 0;
   margin: 0;
   width:314px;
-  display:table-cell;
+  
+}
+@-moz-document url-prefix() {
+  main article.donations section.donate-form fieldset {
+    display:table-cell;
+  }
 }
 
 main article.donations div.form-group {
