--- a/app/assets/stylesheets/donate.css
+++ b/app/assets/stylesheets/donate.css
@@ -239,7 +239,7 @@ main article.donations input.btn {
   margin-bottom: 0.5em;
 }
 
-main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date {
+main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date, main article.donations input.btn.validation-paypal {
 /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a4b357+0,75890c+100;Olive+3D+%233 */
 background: #a4b357; /* Old browsers */
 /* IE9 SVG, needs conditional override of 'filter' to 'none' */
@@ -288,7 +288,7 @@ main article.donations input.btn {
   padding-right: 2em;
   border-radius: 5px;
 }
-main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date {
+main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date, main article.donations input.btn.validation-paypal  {
   box-shadow: 4px 4px 7px -2px grey;
   color: inherit;
 }
@@ -296,11 +296,11 @@ main article.donations input.btn.validation-braintree-valid-number.validation-br
 main article.donations input.btn:focus {
   outline:0;
 }
-main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date:hover {
+main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date, main article.donations input.btn.validation-paypal :hover {
   color: white;
   box-shadow: inset 4px 4px 3px grey;
 }
-main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date:active {
+main article.donations input.btn.validation-braintree-valid-number.validation-braintree-valid-cvv.validation-braintree-valid-date, main article.donations input.btn.validation-paypal :active {
   color: white;
   text-shadow: 0px 0px 12px limegreen;
   box-shadow: inset 0px 0px 8px white;
@@ -352,4 +352,17 @@ div.alert-danger a.close {
 main article.donations input.form-control.error, main article.donations div.has-error input.form-control {
   border-color: red;
   background-color: pink;
+}
+
+main article.donations div.form-group.invisible-fields,
+main article.donations div.form-group.invisible-fields label,
+main article.donations div.form-group.invisible-fields div,
+main article.donations div.form-group.invisible-fields iframe {
+  visibility: hidden;
+  overflow: hidden;
+  position:absolute;
+  height:0;
+  border:0;
+  margin:0;
+  padding:0;
 }
