--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -374,6 +374,9 @@ section.slideshow div.slideshow {
 .no-bottom-margin {
   margin-bottom :0;
 }
+.no-top-margin {
+  margin-top :0;
+}
 .signiture {
   position:relative;
   top: -1em;
