--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -13,13 +13,13 @@
     = f.number_field :amount, label: "Amount of donation ($ USD)", value: "25.00", step: 5.0
     = f.text_area :message, label: "Message (optional)", size: "34x3", placeholder: "If you'd like to include a message with your donation, you can write it here."
     = f.check_box :mailing_list, label: "Please add me to the mailing list"
-    .form-group
+    .form-group.braintree-card<
       = label_tag 'Card number'
       #card-number
-    .form-group<
+    .form-group.braintree-card<
       = label_tag 'Cvv number'
       #cvv-number
-    .form-group
+    .form-group.braintree-card<
       = label_tag 'Expiration Date'
       #expiration-date
     = f.submit "Donate With Credit Card", class: "btn btn-default gradient", id: "donation-form-submit-button"
