--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -60,7 +60,7 @@
 </article>
 <article class="contains-video">
   <section>
-    <p>Our family started AnnaLeah and Mary for Truck Safety, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the underride guard on the truck in front of us had been strong enough to prevent our car from going under it, AnnaLeah and Mary would be here today.</p>
+    <p>Our family started <strong>AnnaLeah and Mary for Truck Safety</strong>, a 501(c)3 non-profit organization, for raising funds for truck safety research. We are starting with underride guards because if the underride guard on the truck in front of us had been strong enough to prevent our car from going under it, AnnaLeah and Mary would be here today.</p>
       <iframe width="420" height="315" src="https://www.youtube.com/embed/m69mxZJ6X9M" frameborder="0" allowfullscreen></iframe>
     <ul>
       <li>Dean Sicking has saved lives through the SAFER barrier he designed for NASCAR. He is interested in taking this technology and using it in underride guards.</li>
