Donate by check info

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -93,7 +93,9 @@
 <article>
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
-
+    <p>By AnnaLeah and Mary For Truck Safety<br>
+    2800 Ridgecrest Dr.
+    Rocky Mount, NC 27803</p>
   </section>
 </article>
 <article>
