Added Thank You and updated retractable article handling

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -5,6 +5,19 @@
     }
   </style>
 <![endif]-->
+<article class="hideable all-hidden" id="thank-you">
+  <section>
+    <h1>Thank You</h1>
+    <p>Thank you for donating to AnnaLeah and Mary for Truck Safety. Your donation will save lives and prevent injuries.</p>
+    <p>We want to continue to make a difference and prevent other families from going through what we have. Please share our story with your friends and family by using the social media buttons below to help spread the word.</p>
+    <%= render 'sharing' %>
+    <p>We would also love to connect with your on Facebook, Twitter, or YouTube. There you can find more information and share your thoughts, comments, or concerns with us.</p>
+    <%= image_tag("content/karth_family_funeral.jpg", alt: "Photo of the Karth Family after the funeral, in from of Mary and AnnaLeah's grave.") %>
+    <p>We really cannot thank you enough!</p>
+    <%= image_tag("layout/the_karth_family_signiture.png", alt: "(signed) The Karth Family", class: "signiture") %>
+  </section>
+</article>
+
 <article>
   <section>
     <%= image_tag("content/truck_rear_underride_guard_cropped.jpg", alt: "Photo of the rear of a truck from the side, showing the metal bars that form the underride guard at the back of the truck.") %>
@@ -94,7 +107,7 @@
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
     <p>By AnnaLeah and Mary For Truck Safety<br>
-    2800 Ridgecrest Dr.
+    2800 Ridgecrest Dr.<br>
     Rocky Mount, NC 27803</p>
   </section>
 </article>
@@ -110,6 +123,17 @@
     <p>An answer to your common question</p>
   </section>
 </article>-->
+<article class="retractable all-hidden" id="contact-us">
+  <section>
+    <h1 class="noselect">Contact Information</h1>
+    <h2>http://www.fortrucksafety.com</h2>
+    <h3>AnnaLeah and Mary For Truck Safety<br>
+    2800 Ridgecrest Dr.<br>
+    Rocky Mount, NC 27803</h3>
+    <h3>Contact Us</h3>
+    <p>You may contact us at any time at: <a href="mailto:marianne@annaleahandmary.com?subject=About%20ForTruckSafety.com">marianne@annaleahandmary.com</a></p>
+  </section>
+</article>
 <article class="retractable all-hidden" id="disclaimer">
   <section>
     <h1 class="noselect">Disclaimer</h1>
@@ -177,7 +201,7 @@
     <p>These Terms are governed by the United States of America. We seek to meet all their requirements.</p>
     <p>Our failure to enforce any part of these terms will not be considered a waiver of the rest of the terms. If any part of our terms is deemed invalid or unenforceable in a court of law, the rest of the terms still apply.</p>
 <h3>Contact Us</h3>
-<p>YYou may contact us at any time at marianne@annaleahandmary.com. We will get back to you as soon as possible.</p>
+<p>You may contact us at any time at marianne@annaleahandmary.com. We will get back to you as soon as possible.</p>
 
     <h3>Changes</h3>
     <p>We can update and make changes to this terms of service at any time. We will post all updates here along with an update date located at the bottom of this page. We will not be contacting users by any means to let them know when these terms are updated.</p>
