--- a/app/views/givers/_sharing.html.erb
+++ b/app/views/givers/_sharing.html.erb
@@ -1,4 +1,4 @@
- <ul class="rrssb-buttons">
+ <ul class="rrssb-buttons do-not-print">
         <li class="rrssb-email">
           <!-- Replace subject with your message using URL Endocding: http://meyerweb.com/eric/tools/dencoder/ -->
           <a href="mailto:?subject=For%20Truck%20Safety&amp;body=http%3A%2F%2Ffortrucksafety.com">
