--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,6 +46,9 @@
       %p
         %a{ href: "http://annaleahmary.com", title: "AnnaLeahMary.com" , target: "_blank"  }
           AnnaLeahMary.com
+        |
+        %a#reveal-contact-info{ href: "#contact-us", title: "Show Contact Information" }
+          Contact Us
     :javascript
       displayDonations();
     %div.return#returntotop
