--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -257,16 +257,22 @@ div.return p {
 }
 
 /* Retractable */
-article.retractable {
+article.retractable h1 {
   cursor: pointer;
 }
-article.retractable.collapsed {
+article.retractable.no-hide {
+  cursor: inherit;
+}
+article.retractable.collapsed, article.hideable.collapsed {
   padding-top:0.25em;
   padding-bottom:0.25em;
 }
 
-article.retractable:hover {
+article.retractable.hovering {
   background-color: transparent;/* #262a76;*/
+}
+article.retractable.no-hide:hover {
+  background-color: #262a76;
 }
 
 article.retractable h1 {
@@ -336,7 +342,7 @@ section.slideshow div.slideshow {
   left: 0px;
   top: 0px;
   width: 100%;
-  min-width:100px;
+  min-width:334px;
   height:100%;
   /*min-height:250px;*/
  /* width: 128px;*/
@@ -459,8 +465,19 @@ div.return:active { background-color: white; color:purple; }
 	  background-color: transparent;
   }
 
-main article.donations input.btn {
-  border: 1px solid;
-}
+  main article.donations input.btn {
+    border: 1px solid;
+  }
 
+  .do-not-print {
+    visibility: hidden;
+  }
+  .only-print {
+    visibility: visible;
+  }
+}
+@media screen {
+  .only-print {
+    visibility: hidden;
+  }
 }
