Hide Thank You unless donation is given

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -5,7 +5,7 @@
     }
   </style>
 <![endif]-->
-<article class="hideable all-hidden" id="thank-you">
+<article class="hideable all-hidden start-hidden" id="thank-you">
   <section>
     <h1>Thank You</h1>
     <p>Thank you for donating to AnnaLeah and Mary for Truck Safety. Your donation will save lives and prevent injuries.</p>
