--- a/app/views/givers/thanks.html.haml
+++ b/app/views/givers/thanks.html.haml
@@ -2,3 +2,5 @@
   %p= link_to "Donate again", root_path
   %p Thank you #{flash[:name]}
   %p Your donation reciept has been sent to the email you provided.
+  :javascript
+    revealThankYou();
