--- a/app/assets/stylesheets/donate.css
+++ b/app/assets/stylesheets/donate.css
@@ -11,7 +11,7 @@ main article.donations {
 }
 
 main article.donations {
-  min-width: 20em;
+  min-width: 16em;
   background-color: none;
   background:none;
   box-shadow: none;
@@ -50,7 +50,7 @@ main article.donations section.donate-form {
   text-align:center;
 
   margin-bottom: 1em;
-  width:98%;
+  /*width:98%;*/
   box-shadow: inset 0 0 7em -2em orange, 5px 5px 15px grey;
   z-index:3;
 
