--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -10,7 +10,7 @@
     = f.text_field :state, label: "State", size: 3, placeholder: "AA"
     = f.text_field :zip, label: "Zip/Postal", size: 7, placeholder: "00000"
     = f.email_field :email, label: "Email Address", placeholder: "Your receipt will be sent here", size: 50
-    = f.number_field :amount, label: "Amount of donation ($ USD)", value: "25.00", step: 5.0
+    = f.number_field :amount, label: "Amount of donation ($ USD)", value: "25.00", step: 5.0, min: 0
     = f.text_area :message, label: "Message (optional)", size: "34x3", placeholder: "If you'd like to include a message with your donation, you can write it here."
     = f.check_box :mailing_list, label: "Please add me to the mailing list"
     .form-group.braintree-card.do-not-print<
