--- a/app/views/givers/_sharing.html.erb
+++ b/app/views/givers/_sharing.html.erb
@@ -1,7 +1,7 @@
  <ul class="rrssb-buttons do-not-print">
         <li class="rrssb-email">
           <!-- Replace subject with your message using URL Endocding: http://meyerweb.com/eric/tools/dencoder/ -->
-          <a href="mailto:?subject=For%20Truck%20Safety&amp;body=http%3A%2F%2Ffortrucksafety.com">
+          <a href="mailto:?subject=For%20Truck%20Safety&amp;body=I%20came%20across%20this%20site%20and%20thought%20that%20it%20was%20a%20worthwhile%20cause%20to%20support%3A%20http%3A%2F%2Ffortrucksafety.com">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M20.11 26.147c-2.335 1.05-4.36 1.4-7.124 1.4C6.524 27.548.84 22.916.84 15.284.84 7.343 6.602.45 15.4.45c6.854 0 11.8 4.7 11.8 11.252 0 5.684-3.193 9.265-7.398 9.3-1.83 0-3.153-.934-3.347-2.997h-.077c-1.208 1.986-2.96 2.997-5.023 2.997-2.532 0-4.36-1.868-4.36-5.062 0-4.75 3.503-9.07 9.11-9.07 1.713 0 3.7.4 4.6.972l-1.17 7.203c-.387 2.298-.115 3.3 1 3.4 1.674 0 3.774-2.102 3.774-6.58 0-5.06-3.27-8.994-9.304-8.994C9.05 2.87 3.83 7.545 3.83 14.97c0 6.5 4.2 10.2 10 10.202 1.987 0 4.09-.43 5.647-1.245l.634 2.22zM16.647 10.1c-.31-.078-.7-.155-1.207-.155-2.572 0-4.596 2.53-4.596 5.53 0 1.5.7 2.4 1.9 2.4 1.44 0 2.96-1.83 3.31-4.088l.592-3.72z"
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li class="rrssb-tumblr">
-          <a href="http://tumblr.com/share/link?url=http%3A%2F%2Ffortrucksafety.com&name=For%20Truck%20Safety">
+          <a href="http://tumblr.com/share/link?url=http%3A%2F%2Ffortrucksafety.com&name=For%20Truck%20Safety&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety&amp;&amp;posttype=photo&amp;content=assets/content/truck_rear_underride_guard_cropped.jpg" >
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M18.02 21.842c-2.03.052-2.422-1.396-2.44-2.446v-7.294h4.73V7.874H15.6V1.592h-3.714s-.167.053-.182.186c-.218 1.935-1.144 5.33-4.988 6.688v3.637h2.927v7.677c0 2.8 1.7 6.7 7.3 6.6 1.863-.03 3.934-.795 4.392-1.453l-1.22-3.54c-.52.213-1.415.413-2.115.455z"
@@ -37,7 +37,7 @@
         </li>
         <li class="rrssb-linkedin">
           <!-- Replace href with your meta and URL information -->
-          <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://fortrucksafety.com&amp;title=For%20Truck%20Safety&amp;summary=For%20Truck%20Safety" class="popup">
+          <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://fortrucksafety.com&amp;title=For%20Truck%20Safety&amp;summary=More%20people%20would%20survive%20truck%20crashes%20if%20truck%20underride%20guards%20were%20stronger.%204,000%20people%20die%20each%20year%20in%20truck%20crashes.%20Many%20of%20those%20deaths%20happen%20because%20the%20car%20goes%20under%20the%20truck." class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M25.424 15.887v8.447h-4.896v-7.882c0-1.98-.71-3.33-2.48-3.33-1.354 0-2.158.91-2.514 1.802-.13.315-.162.753-.162 1.194v8.216h-4.9s.067-13.35 0-14.73h4.9v2.087c-.01.017-.023.033-.033.05h.032v-.05c.65-1.002 1.812-2.435 4.414-2.435 3.222 0 5.638 2.106 5.638 6.632zM5.348 2.5c-1.676 0-2.772 1.093-2.772 2.54 0 1.42 1.066 2.538 2.717 2.546h.032c1.71 0 2.77-1.132 2.77-2.546C8.056 3.593 7.02 2.5 5.344 2.5h.005zm-2.48 21.834h4.896V9.604H2.867v14.73z"
@@ -49,7 +49,7 @@
         </li>
         <li class="rrssb-twitter">
           <!-- Replace href with your Meta and URL information  -->
-          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http%3A%2F%2Ffortrucksafety.com%2images%2Fpreview.png&amp;hashtags=trucksafety,fortrucksafety"
+          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http%3A%2F%2Ffortrucksafety.com%2images%2Fpreview.png&amp;hashtags=trucksafety"
           class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -85,7 +85,7 @@
         </li>
         <li class="rrssb-googleplus">
           <!-- Replace href with your meta and URL information.  -->
-          <a href="https://plus.google.com/share?url=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20http://trucksafety.com" class="popup">
+          <a href="https://plus.google.com/share?url=http://fortrucksafety.com" class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M14.703 15.854l-1.22-.948c-.37-.308-.88-.715-.88-1.46 0-.747.51-1.222.95-1.662 1.42-1.12 2.84-2.31 2.84-4.817 0-2.58-1.62-3.937-2.4-4.58h2.098l2.203-1.384h-6.67c-1.83 0-4.467.433-6.398 2.027C3.768 4.287 3.06 6.018 3.06 7.576c0 2.634 2.02 5.328 5.603 5.328.34 0 .71-.033 1.083-.068-.167.408-.336.748-.336 1.324 0 1.04.55 1.685 1.01 2.297-1.523.104-4.37.273-6.466 1.562-1.998 1.187-2.605 2.915-2.605 4.136 0 2.512 2.357 4.84 7.288 4.84 5.822 0 8.904-3.223 8.904-6.41.008-2.327-1.36-3.49-2.83-4.73h-.01zM10.27 11.95c-2.913 0-4.232-3.764-4.232-6.036 0-.884.168-1.797.744-2.51.543-.68 1.49-1.12 2.372-1.12 2.807 0 4.256 3.797 4.256 6.24 0 .613-.067 1.695-.845 2.48-.537.55-1.438.947-2.295.95v-.003zm.032 13.66c-3.62 0-5.957-1.733-5.957-4.143 0-2.408 2.165-3.223 2.91-3.492 1.422-.48 3.25-.545 3.556-.545.34 0 .52 0 .767.034 2.574 1.838 3.706 2.757 3.706 4.48-.002 2.072-1.736 3.664-4.982 3.648l.002.017zM23.254 11.89V8.52H21.57v3.37H18.2v1.714h3.367v3.4h1.684v-3.4h3.4V11.89"
@@ -95,8 +95,9 @@
             <span class="rrssb-text">google+</span>
           </a>
         </li>
+   <!--
         <li class="rrssb-youtube">
-          <a href="#">
+          <a href="https://youtu.be/dGXR02wkjvM">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M27.688 8.512c0-2.268-1.825-4.093-4.106-4.093H4.39C2.143 4.42.312 6.243.312 8.51v10.976c0 2.268 1.825 4.093 4.076 4.093h19.19c2.275 0 4.107-1.824 4.107-4.092V8.512zm-16.425 10.12V8.322l7.817 5.154-7.817 5.156z" />
@@ -105,9 +106,10 @@
             <span class="rrssb-text">youtube</span>
           </a>
         </li>
+-->
         <li class="rrssb-pinterest">
           <!-- Replace href with your meta and URL information.  -->
-          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=http://fortrucksafety.com/path-to-image/image-name.jpg&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com">
+          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=http://fortrucksafety.com/files/truck_rear_underride_guard_cropped.jpg&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M14.02 1.57c-7.06 0-12.784 5.723-12.784 12.785S6.96 27.14 14.02 27.14c7.062 0 12.786-5.725 12.786-12.785 0-7.06-5.724-12.785-12.785-12.785zm1.24 17.085c-1.16-.09-1.648-.666-2.558-1.22-.5 2.627-1.113 5.146-2.925 6.46-.56-3.972.822-6.952 1.462-10.117-1.094-1.84.13-5.545 2.437-4.632 2.837 1.123-2.458 6.842 1.1 7.557 3.71.744 5.226-6.44 2.924-8.775-3.324-3.374-9.677-.077-8.896 4.754.19 1.178 1.408 1.538.49 3.168-2.13-.472-2.764-2.15-2.683-4.388.132-3.662 3.292-6.227 6.46-6.582 4.008-.448 7.772 1.474 8.29 5.24.58 4.254-1.815 8.864-6.1 8.532v.003z"
