Remove "donate again" link for now

--- a/app/views/givers/thanks.html.haml
+++ b/app/views/givers/thanks.html.haml
@@ -1,6 +1,6 @@
 -# %section.donate-form 
 %p Thank you #{flash[:name]}
 %p Your donation reciept has been sent to the email you provided.
-%p= link_to "Donate again", root_path
+-# %p= link_to "Donate again", root_path
 :javascript
   revealThankYou();
