fixed inadvertantly removed closing ul tag

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -109,7 +109,7 @@
 <article>
   <section>
     <p>If you'd like to donate by check, rather than credit card, please make your payments out to:</p>
-    <p>By AnnaLeah and Mary For Truck Safety<br>
+    <p>AnnaLeah and Mary For Truck Safety<br>
     2800 Ridgecrest Dr.<br>
     Rocky Mount, NC 27803</p>
   </section>
@@ -126,7 +126,7 @@
     <p>An answer to your common question</p>
   </section>
 </article>-->
-<article class="retractable all-hidden" id="contact-us">
+<article class="retractable all-hidden entire-retract" id="contact-us">
   <section>
     <h1 class="noselect">Contact Information</h1>
     <h2>http://www.fortrucksafety.com</h2>
@@ -137,11 +137,11 @@
     <p>You may contact us at any time at: <a href="mailto:marianne@annaleahandmary.com?subject=About%20ForTruckSafety.com">marianne@annaleahandmary.com</a></p>
   </section>
 </article>
-<article class="retractable all-hidden" id="disclaimer">
+<article class="retractable all-hidden entire-retract" id="disclaimer">
   <section>
     <h1 class="noselect">Disclaimer</h1>
     <h2>http://www.fortrucksafety.com</h2>
-    <h2>By AnnaLeah and Mary For Truck Safety</h2>
+    <h2>AnnaLeah and Mary For Truck Safety</h2>
     <h2>2800 Ridgecrest Dr.</h2>
     <h2>Rocky Mount, NC 27803</h2>
 
@@ -149,11 +149,11 @@
     <p>Last Updated: September 8, 2015</p>
   </section>
 </article>
-<article class="retractable all-hidden" id="privacy-statement">
+<article class="retractable all-hidden entire-retract" id="privacy-statement">
   <section>
     <h1 class="noselect">Privacy Policy</h1>
     <h2>http://www.fortrucksafety.com</h2>
-    <h2>by AnnaLeah and Mary for Truck Safety</h2>
+    <h2>AnnaLeah and Mary for Truck Safety</h2>
     <h2>2800 Ridgecrest Dr.</h2>
     <h2>Rocky Mount, NC 27803</h2>
 
@@ -178,11 +178,11 @@
     <p>Last Updated: September 8, 2015</p>
   </section>
 </article>
-<article class="retractable all-hidden" id="terms-of-use">
+<article class="retractable all-hidden entire-retract" id="terms-of-use">
   <section>
     <h1 class="noselect">Terms of Use</h1>
     <h2>http://www.fortrucksafety.com</h2>
-    <h2>by AnnaLeah and Mary for Truck Safety</h2>
+    <h2>AnnaLeah and Mary for Truck Safety</h2>
     <h2>2800 Ridgecrest Dr.</h2>
     <h2>Rocky Mount, NC 27803</h2>
 
