--- a/app/views/givers/_sharing.html.erb
+++ b/app/views/givers/_sharing.html.erb
@@ -36,7 +36,6 @@
           </a>
         </li>
         <li class="rrssb-linkedin">
-          <!-- Replace href with your meta and URL information -->
           <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=http://fortrucksafety.com&amp;title=For%20Truck%20Safety&amp;summary=More%20people%20would%20survive%20truck%20crashes%20if%20truck%20underride%20guards%20were%20stronger.%204,000%20people%20die%20each%20year%20in%20truck%20crashes.%20Many%20of%20those%20deaths%20happen%20because%20the%20car%20goes%20under%20the%20truck." class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -60,6 +59,7 @@
             <span class="rrssb-text">twitter</span>
           </a>
         </li>
+   <!--
         <li class="rrssb-reddit">
           <a href="http://www.reddit.com/submit?url=http://fortrucksafety.com&title=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.&text=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.">
             <span class="rrssb-icon">
@@ -73,6 +73,8 @@
             <span class="rrssb-text">reddit</span>
           </a>
         </li>
+-->
+   <!--
         <li class="rrssb-hackernews">
           <a href="https://news.ycombinator.com/submitlink?u=http://fortrucksafety.com&t=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.&text=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.">
             <span class="rrssb-icon">
@@ -83,6 +85,7 @@
             <span class="rrssb-text">hackernews</span>
           </a>
         </li>
+-->
         <li class="rrssb-googleplus">
           <!-- Replace href with your meta and URL information.  -->
           <a href="https://plus.google.com/share?url=http://fortrucksafety.com" class="popup">
@@ -109,7 +112,7 @@
 -->
         <li class="rrssb-pinterest">
           <!-- Replace href with your meta and URL information.  -->
-          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=http://fortrucksafety.com/files/truck_rear_underride_guard_cropped.jpg&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com">
+          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=http://fortrucksafety.com/files/truck_rear_underride_guard_cropped.jpg&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com" target="_blank">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M14.02 1.57c-7.06 0-12.784 5.723-12.784 12.785S6.96 27.14 14.02 27.14c7.062 0 12.786-5.725 12.786-12.785 0-7.06-5.724-12.785-12.785-12.785zm1.24 17.085c-1.16-.09-1.648-.666-2.558-1.22-.5 2.627-1.113 5.146-2.925 6.46-.56-3.972.822-6.952 1.462-10.117-1.094-1.84.13-5.545 2.437-4.632 2.837 1.123-2.458 6.842 1.1 7.557 3.71.744 5.226-6.44 2.924-8.775-3.324-3.374-9.677-.077-8.896 4.754.19 1.178 1.408 1.538.49 3.168-2.13-.472-2.764-2.15-2.683-4.388.132-3.662 3.292-6.227 6.46-6.582 4.008-.448 7.772 1.474 8.29 5.24.58 4.254-1.815 8.864-6.1 8.532v.003z"
@@ -119,6 +122,7 @@
             <span class="rrssb-text">pinterest</span>
           </a>
         </li>
+   <!--
         <li class="rrssb-pocket">
           <a href="https://getpocket.com/save?url=http://fortrucksafety.com">
             <span class="rrssb-icon">
@@ -130,6 +134,7 @@
             <span class="rrssb-text">pocket</span>
           </a>
         </li>
+-->
    <!--
         <li class="rrssb-github">
           <a href="https://github.com/kni-labs/rrssb">
@@ -143,6 +148,7 @@
           </a>
         </li>
 -->
+   <!--
         <li class="rrssb-vk">
           <a href="http://vk.com/share.php?url=http://fortrucksafety.com" class="popup">
             <span class="rrssb-icon">
@@ -150,6 +156,7 @@
             </span>
             <span class="rrssb-text">vk.com</span>
           </a>
-        </li>
+        </li>-->
       </ul>
+
       <!-- Buttons end here -->
