--- a/app/assets/stylesheets/safety.css
+++ b/app/assets/stylesheets/safety.css
@@ -257,7 +257,7 @@ div.return p {
 }
 
 /* Retractable */
-article.retractable h1 {
+article.retractable.entire-retract {
   cursor: pointer;
 }
 article.retractable.no-hide {
@@ -268,10 +268,10 @@ article.retractable.collapsed, article.hideable.collapsed {
   padding-bottom:0.25em;
 }
 
-article.retractable.hovering {
+article.retractable.hovering, article.retractable.entire-retract:hover {
   background-color: transparent;/* #262a76;*/
 }
-article.retractable.no-hide:hover {
+article.retractable.collapsed:hover {
   background-color: #262a76;
 }
 
