--- a/app/views/app_mailer/receipt.html.haml
+++ b/app/views/app_mailer/receipt.html.haml
@@ -2,8 +2,10 @@
 %html
   %body
     %p Dear #{@giver.full_name},
-    %p Thank you for your donation of #{@donation.amount} to support Truck Underride Research. You are helping to bring about safety measures that will ensure more people survive truck crashes. 
+    %p Thank you for your donation of $#{@donation.amount} to support Truck Underride Research. You are helping to bring about safety measures that will ensure more people survive truck crashes.
+    %p
     %p Please share our page via all of your favorite social media sites. Getting the word out about this vital project will make a huge difference in saving lives. To make it easy for you we have provided sharing buttons on our website!  
+    %p
     %p In memory of AnnaLeah and Mary,
     %p The Karth Family
     %p fortrucksafety.com
