--- a/app/views/givers/_sharing.html.erb
+++ b/app/views/givers/_sharing.html.erb
@@ -14,7 +14,7 @@
         <li class="rrssb-facebook">
           <!--  Replace with your URL. For best results, make sure you page has the proper FB Open Graph tags in header:
                 https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/ -->
-          <a href="https://www.facebook.com/sharer/sharer.php?u=http://fortrucksafety.com" class="popup">
+          <a href="https://www.facebook.com/sharer/sharer.php?u=http://www.fortrucksafety.com" class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid" width="29" height="29" viewBox="0 0 29 29">
                 <path d="M26.4 0H2.6C1.714 0 0 1.715 0 2.6v23.8c0 .884 1.715 2.6 2.6 2.6h12.393V17.988h-3.996v-3.98h3.997v-3.062c0-3.746 2.835-5.97 6.177-5.97 1.6 0 2.444.173 2.845.226v3.792H21.18c-1.817 0-2.156.9-2.156 2.168v2.847h5.045l-.66 3.978h-4.386V29H26.4c.884 0 2.6-1.716 2.6-2.6V2.6c0-.885-1.716-2.6-2.6-2.6z"
@@ -25,7 +25,8 @@
           </a>
         </li>
         <li class="rrssb-tumblr">
-          <a href="http://tumblr.com/share/link?url=http%3A%2F%2Ffortrucksafety.com&name=For%20Truck%20Safety&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety&amp;&amp;posttype=photo&amp;content=assets/content/truck_rear_underride_guard_cropped.jpg" >
+          <a href="http://tumblr.com/widgets/share/tool?canonicalUrl=http%3A%2F%2Fwww.fortrucksafety.com&amp;&amp;posttype=link&amp;title=For%20Truck%20Safety&amp;content=http://www.fortrucksafety.com&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety!<img src=&quot;http%3A%2F%2Fgoo.gl%2FcFmQQJ&quot;>" target="_blank" >
+          <!--<a href="http://tumblr.com/widgets/share/tool?canonicalUrl=http%3A%2F%2Fwww.fortrucksafety.com&amp;posttype=photo&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety%3A%20http%3A%2F%2Fwww.fortrucksafety.com&amp;content=http://fortrucksafety.com/files/underride_research_saves_lives.jpg" target="_blank" >-->
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M18.02 21.842c-2.03.052-2.422-1.396-2.44-2.446v-7.294h4.73V7.874H15.6V1.592h-3.714s-.167.053-.182.186c-.218 1.935-1.144 5.33-4.988 6.688v3.637h2.927v7.677c0 2.8 1.7 6.7 7.3 6.6 1.863-.03 3.934-.795 4.392-1.453l-1.22-3.54c-.52.213-1.415.413-2.115.455z"
@@ -48,7 +49,7 @@
         </li>
         <li class="rrssb-twitter">
           <!-- Replace href with your Meta and URL information  -->
-          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http%3A%2F%2Ffortrucksafety.com%2images%2Fpreview.png&amp;hashtags=trucksafety"
+          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http://goo.gl/cFmQQJ&amp;hashtags=trucksafety"
           class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -112,7 +113,7 @@
 -->
         <li class="rrssb-pinterest">
           <!-- Replace href with your meta and URL information.  -->
-          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=http://fortrucksafety.com/files/truck_rear_underride_guard_cropped.jpg&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com" target="_blank">
+          <a href="http://pinterest.com/pin/create/button/?url=http://fortrucksafety.com&amp;media=<%= asset_url("content/underride_research_saves_lives.jpg") %>&amp;description=Help%20prevent%20truck%20underride%20deaths.%20Support%20Underride%20Research.%20ForTruckSafety.com" target="_blank">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
                 <path d="M14.02 1.57c-7.06 0-12.784 5.723-12.784 12.785S6.96 27.14 14.02 27.14c7.062 0 12.786-5.725 12.786-12.785 0-7.06-5.724-12.785-12.785-12.785zm1.24 17.085c-1.16-.09-1.648-.666-2.558-1.22-.5 2.627-1.113 5.146-2.925 6.46-.56-3.972.822-6.952 1.462-10.117-1.094-1.84.13-5.545 2.437-4.632 2.837 1.123-2.458 6.842 1.1 7.557 3.71.744 5.226-6.44 2.924-8.775-3.324-3.374-9.677-.077-8.896 4.754.19 1.178 1.408 1.538.49 3.168-2.13-.472-2.764-2.15-2.683-4.388.132-3.662 3.292-6.227 6.46-6.582 4.008-.448 7.772 1.474 8.29 5.24.58 4.254-1.815 8.864-6.1 8.532v.003z"
