--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -12,7 +12,7 @@
     <p>We want to continue to make a difference and prevent other families from going through what we have. Please share our story with your friends and family by using the social media buttons below to help spread the word.</p>
     <%= render 'sharing' %>
     <p>We would also love to connect with your on <a href="https://www.facebook.com/pages/In-Memory-of-AnnaLeah-1995-to-2013-and-Mary-Lydia-Karth-1999-to-2013/464993830249803" target="_blank">Facebook</a>, <a href="https://twitter.com/MaryandAnnaLeah" target="_blank">Twitter</a>, or <a href="https://www.youtube.com/channel/UCD-_wRmJmnZ3f5xBVXUe22A/feed" target="_blank">YouTube</a>. There you can find more information and share your thoughts, comments, or concerns with us.</p>
-    <%= image_tag("content/karth_family_funeral.jpg", alt: "Photo of the Karth Family after the funeral, in from of Mary and AnnaLeah's grave.") %>
+    <%= image_tag("content/karth_family_funeral.jpg", alt: "Photo of the Karth Family after the funeral, in front of Mary and AnnaLeah's grave.") %>
     <p>We really cannot thank you enough!</p>
     <%= image_tag("layout/the_karth_family_signiture.png", alt: "(signed) The Karth Family", class: "signiture") %>
   </section>
