fixed missing quote

--- a/app/assets/stylesheets/donate.scss
+++ b/app/assets/stylesheets/donate.scss
@@ -133,7 +133,7 @@ main article.donations div.form-group:nth-of-type(13) { width:49.25%; display: i
 
 /* Credit card payment provider images */
 .card-image-visa { background: asset_url("layout/creditcards/visa.svg"); }
-.card-image-diners-club { background: asset_url("layout/creditcards/diners.svg); }
+.card-image-diners-club { background: asset_url("layout/creditcards/diners.svg"); }
 .card-image-discover { background: asset_url("layout/creditcards/discover.svg"); }
 .card-image-jcb { background: asset_url("layout/creditcards/jcb.svg"); }
 .card-image-maestro { background: asset_url("layout/creditcards/maestro.svg"); }
