Added validation to prevent long state names

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,8 @@
       %article.donations
         %section.donate-form
           = yield
+          -# %a{:href => "https://www.expeditedssl.com/simple-ssl-scanner/scan?target_domain=www.fortrucksafety.com", :target => "_blank"}
+            %img{:alt => "Expedited SSL Scanner", :src => "https://www.expeditedssl.com/ssl-secure-badge.png"}
         %section.donate-chart
           %h2 Donated So Far
           %p.donation-amount VALUE
