Fixed typos, made terms of use linkable via url (javascript unhides when detected)

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
   %body
     %div.overlay.invisible
     %header.logo
-      =image_tag "layout/annaleah_and_mary_for_truck_safety_logo_web_midl.png"
+      =image_tag "layout/annaleah_and_mary_for_truck_safety_logo_web_midl.png", :alt => "AnnaLeah and Mary for Truck Safety Logo"
     %main.main{:role => "main"}
       :javascript
         scrollHandler();
