Temporarily remove paypal from interface

--- a/app/views/givers/new.html.haml
+++ b/app/views/givers/new.html.haml
@@ -23,7 +23,7 @@
       = label_tag 'Expiration Date'
       #expiration-date
     = f.submit "Donate With Credit Card", class: "btn btn-default gradient do-not-print", id: "donation-form-submit-button"
-    %div.paypal-group.do-not-print<
+    -#%div.paypal-group.do-not-print<
       %p><
         OR
         %br><
