fixes for sharing links

--- a/app/views/givers/_sharing.html.erb
+++ b/app/views/givers/_sharing.html.erb
@@ -1,6 +1,8 @@
- <ul class="rrssb-buttons do-not-print">
-        <li class="rrssb-email">
           <!-- Replace subject with your message using URL Endocding: http://meyerweb.com/eric/tools/dencoder/ -->
+
+<ul class="rrssb-buttons do-not-print">
+   <!--
+        <li class="rrssb-email">
           <a href="mailto:?subject=For%20Truck%20Safety&amp;body=I%20came%20across%20this%20site%20and%20thought%20that%20it%20was%20a%20worthwhile%20cause%20to%20support%3A%20http%3A%2F%2Ffortrucksafety.com">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -11,6 +13,7 @@
             <span class="rrssb-text">email</span>
           </a>
         </li>
+-->
         <li class="rrssb-facebook">
           <!--  Replace with your URL. For best results, make sure you page has the proper FB Open Graph tags in header:
                 https://developers.facebook.com/docs/opengraph/howtos/maximizing-distribution-media-content/ -->
@@ -25,7 +28,7 @@
           </a>
         </li>
         <li class="rrssb-tumblr">
-          <a href="http://tumblr.com/widgets/share/tool?canonicalUrl=http%3A%2F%2Fwww.fortrucksafety.com&amp;&amp;posttype=link&amp;title=For%20Truck%20Safety&amp;content=http://www.fortrucksafety.com&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety!<img src=&quot;http%3A%2F%2Fgoo.gl%2FcFmQQJ&quot;>" target="_blank" >
+          <a href="http://tumblr.com/widgets/share/tool?canonicalUrl=http%3A%2F%2Fwww.fortrucksafety.com&amp;&amp;posttype=link&amp;title=For%20Truck%20Safety&amp;content=http://www.fortrucksafety.com&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety!<img src=&quot;http://goo.gl/4OIjbK&quot;>" target="_blank" >
           <!--<a href="http://tumblr.com/widgets/share/tool?canonicalUrl=http%3A%2F%2Fwww.fortrucksafety.com&amp;posttype=photo&amp;caption=Help%20save%20lives%3A%20Spread%20the%20word%20about%20truck%20safety%3A%20http%3A%2F%2Fwww.fortrucksafety.com&amp;content=http://fortrucksafety.com/files/underride_research_saves_lives.jpg" target="_blank" >-->
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
@@ -49,7 +52,7 @@
         </li>
         <li class="rrssb-twitter">
           <!-- Replace href with your Meta and URL information  -->
-          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http://goo.gl/cFmQQJ&amp;hashtags=trucksafety"
+          <a href="https://twitter.com/intent/tweet?text=%20Help%20prevent%20truck%20underride%20deaths.%20Please%20Share!%20http%3A%2F%2Ffortrucksafety.com%20http://goo.gl/4OIjbK&amp;hashtags=trucksafety"
           class="popup">
             <span class="rrssb-icon">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 28 28">
