Fixed contact info

--- a/app/views/givers/_content.html.erb
+++ b/app/views/givers/_content.html.erb
@@ -134,7 +134,7 @@
     2800 Ridgecrest Dr.<br>
     Rocky Mount, NC 27803</h3>
     <h3>Contact Us</h3>
-    <p>You may contact us at any time at: <a href="mailto:marianne@annaleahandmary.com?subject=About%20ForTruckSafety.com">marianne@annaleahandmary.com</a></p>
+    <p>You may contact us at any time at: <a href="mailto:marianne@annahleahmary.com?subject=About%20ForTruckSafety.com">marianne@annahleahmary.com</a></p>
   </section>
 </article>
 <article class="retractable all-hidden entire-retract" id="disclaimer">
@@ -171,7 +171,7 @@
     <h3>Children Under 13</h3>
     <p>We will never attempt to collect information from children under 13. Our site is not designed for children and we ask that they do not use our site.</p>
     <h3>Contact Us</h3>
-<p>You can contact us at marianne@annaleahandmary.com. We will do our best to get back to you as soon as possible.
+<p>You can contact us at marianne@annahleahmary.com. We will do our best to get back to you as soon as possible.
 </p>
     <h3>Changes to Our Privacy Policy</h3>
 <p>We retain the right to update this privacy policy as we see fit and will do so periodically. Users will not be notified, but the date will be updated when it has been changed.</p>
@@ -204,7 +204,7 @@
     <p>These Terms are governed by the United States of America. We seek to meet all their requirements.</p>
     <p>Our failure to enforce any part of these terms will not be considered a waiver of the rest of the terms. If any part of our terms is deemed invalid or unenforceable in a court of law, the rest of the terms still apply.</p>
 <h3>Contact Us</h3>
-<p>You may contact us at any time at marianne@annaleahandmary.com. We will get back to you as soon as possible.</p>
+<p>You may contact us at any time at marianne@annahleahmary.com. We will get back to you as soon as possible.</p>
 
     <h3>Changes</h3>
     <p>We can update and make changes to this terms of service at any time. We will post all updates here along with an update date located at the bottom of this page. We will not be contacting users by any means to let them know when these terms are updated.</p>
